# dbfriend

./: .gitignore  CHANGELOG.md  README.md  dbfriend.py  geometry_details.txt  pyproject.toml  pytest.ini  requirements.txt
dbfriend/: __init__.py  dbfriend.py
dbfriend/.history/: dbfriend_20241104022020.py  dbfriend_20241104023136.py  dbfriend_20241104023423.py  dbfriend_20241104023703.py  dbfriend_20241104023712.py  dbfriend_20241104023741.py  dbfriend_20241104024015.py  dbfriend_20241104024017.py  dbfriend_20241104024034.py  dbfriend_20241104024044.py  dbfriend_20241104024047.py  dbfriend_20241104024054.py  dbfriend_20241104024114.py  dbfriend_20241104024342.py  dbfriend_20241104024403.py  dbfriend_20241104024621.py  dbfriend_20241104024812.py  dbfriend_20241104145723.py  dbfriend_20241104151313.py  dbfriend_20241104151550.py  dbfriend_20241104151553.py  dbfriend_20241104152247.py  dbfriend_20241104152313.py  dbfriend_20241104152315.py  dbfriend_20241104152416.py  dbfriend_20241104152508.py  dbfriend_20241104152523.py  dbfriend_20241104152551.py  dbfriend_20241104152624.py  dbfriend_20241104152808.py  dbfriend_20241104153131.py  dbfriend_20241104153446.py  dbfriend_20241104154051.py  dbfriend_20241104154408.py  dbfriend_20241104155757.py  dbfriend_20241104155844.py  dbfriend_20241104160455.py  dbfriend_20241104160556.py  dbfriend_20241104161241.py  dbfriend_20241104161253.py  (+102 more)
dbfriend/tests/: test_dbfriend.py
