[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbfriend"
version = "0.1.0"
description = "A CLI tool to load spatial data into PostGIS with compatibility checks."
authors = [
    { name = "Jesper Fjellin", email = "jesperfjellin@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.6"
keywords = ["cli", "postgis", "geopandas", "spatial", "gis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "geopandas>=1.0.1",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "rich>=13.9.4",
    "sqlalchemy>=2.0.36",
]

[project.scripts]
dbfriend = "dbfriend.dbfriend:main"

[tool.setuptools.packages.find]
include = ["dbfriend"]
